# xrc1-modpack

./: .gitignore  GUIA-SUBIR-MODS.md  GitHub  HERRAMIENTAS.md  INICIO-RAPIDO.md  LEEME-PRIMERO.txt  README.md  RELEASE-TEMPLATE.txt  SETUP-GUIDE.md  build-release.bat  build-release.ps1  generate-config.js  generate-mods-json.py  generate-mods-metadata.ps1  manage-mods.bat  manage-mods.ps1  mods-config.json  mods-metadata.json  package-lock.json  package.json  rename-server-mods.ps1  server-start.ps1  upload-to-github.py
.claude/: settings.local.json
assets/: README.md
src/: index.html  main.js  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main.rs.backup  main.rs.backup2
ui/: app.js  index.html  styles.css  tauri.js
