[package]
name = "xrc1-mod-installer"
version = "1.0.0"
description = "XRC1 Crew Mod Installer for Minecraft 1.20.1"
authors = ["XRC1 Crew"]
license = ""
repository = ""
default-run = "xrc1-mod-installer"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["dialog-all", "shell-open", "window-close", "window-hide", "window-show", "window-maximize", "window-minimize", "window-unmaximize", "window-unminimize", "window-start-dragging"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5.0"
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
